<resources>
    <string name="app_name">SecondLibraryMobile</string>
    <string name="nombre_usuario">Nombre de usuario:\n</string>
    <string name="password">Contraseña\n</string>
    <string name="iniciar_sesion">Iniciar Sesión</string>
    <string name="registrar">Registrarse</string>

    <!--Perfil de usuario-->
    <string name="perfilUsuario">Perfil de usuario</string>
    <string name="nombreUsuario">NombreUsuario</string>
    <string name="passwordUsuario">Password</string>
    <string name="nombre">Nombre</string>
    <string name="apellidoPaterno">apellidoPaterno</string>
    <string name="apellidoMaterno">apellidoMaterno</string>
    <string name="matricula">Matricula</string>
    <string name="correo">Correo</string>
    <string name="edicion">Editar datos</string>

    <!--Mensajeria-->
    <string name="mensaje">Escribe un mensaje</string>
    <string name="eliminarcuenta">Eliminar cuenta</string>
</resources>