<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    tools:context=".Activity.perfil_usuario">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:orientation="vertical">

        <TextView
            android:text="@string/perfilUsuario"
            android:gravity="center"
            android:textSize="24sp"
            android:textColor="@color/black"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imagenPerfil"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:src="@drawable/btn_4"/>

        <TextView
            android:id="@+id/nombreUsuario"
            android:text="@string/nombreUsuario"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/passwordUsuario"
            android:text="@string/passwordUsuario"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:layout_marginTop="3dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/nombre"
            android:text="@string/nombre"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:layout_marginTop="3dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/apellidoPaterno"
            android:text="@string/apellidoPaterno"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:layout_marginTop="3dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/apellidoMaterno"
            android:text="@string/apellidoMaterno"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:layout_marginTop="3dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/matricula"
            android:text="@string/matricula"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:layout_marginTop="3dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/correo"
            android:text="@string/correo"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:layout_marginTop="3dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnEdicion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:background="@drawable/blue_button_background"
            android:drawableStart="@android:drawable/ic_menu_edit"
            android:text="@string/edicion"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:layout_gravity="center"
            android:drawablePadding="15dp"
            android:padding="10dp"/>

        <TextView
            android:id="@+id/txtPublicaciones"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Publicaciones"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginTop="10dp"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/listaPublicaciones"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </androidx.appcompat.widget.LinearLayoutCompat>
</ScrollView>